# fruc_rosbags

./: CMakeLists.txt  README.md  package.xml
launch/: 2019_2020_quinta_do_bolao_coimbra_part1.launch  2019_2020_quinta_do_bolao_coimbra_part2.launch  2020_ctcv_parking_lot_coimbra.launch  2020_sete_fontes_forest.launch  2021_ctcv_parking_lot_coimbra.launch  display_semfire_bobcat.launch  static_tfs.launch
rosbags/: .gitignore
rviz/: 2019_2020_quinta_do_bolao_coimbra_part1.rviz  2019_2020_quinta_do_bolao_coimbra_part2.rviz  2020_ctcv_parking_lot_coimbra.rviz  2020_sete_fontes_forest.rviz
urdf/: _d435.urdf.xacro  d435_camera.urdf.xacro  semfire_bobcat.urdf
