<?xml version="1.0"?>
<package format="2">
  <name>fruc_rosbags</name>
  <version>0.1.0</version>
  <description>The fruc_rosbags package</description>
  <maintainer email="duda.andrada@isr.uc.pt">M Eduarda Andrada</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>lslidar_c16_decoder</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
